--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -26,8 +26,8 @@ security:
                 secret: '%kernel.secret%'
                 lifetime: 604800
                 path: /
-                # by default, the feature is enabled by checking a checkbox in the
-                # login form, uncomment the following line to always enable it.
+                domain: ~ # Defaults to the current domain
+                remember_me_parameter: '_remember_me' # Must match your checkbox name
                 #always_remember_me: true
 
             # activate different ways to authenticate
@@ -42,7 +42,8 @@ security:
     - { path: ^/admin, roles: ROLE_ADMIN }
     - { path: ^/login, roles: PUBLIC_ACCESS }
     - { path: ^/register, roles: PUBLIC_ACCESS }
-    - { path: ^/user, roles: ROLE_USER }     
+    - { path: ^/user, roles: ROLE_USER } 
+    - { path: ^/club, roles: PUBLIC_ACCESS }    
 
 
 
